--- a/roles/demo_app/tasks/main.yml
+++ b/roles/demo_app/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for demo_app
 - name: install web components
-  apt: name={{item}} state=present update_cache=yes
+  apt: name={{item}} state=present
   with_items:
     - python-pip
     - python-virtualenv
